filtro funcional category

--- a/app/views/categories/_formulario_edit.html.erb
+++ b/app/views/categories/_formulario_edit.html.erb
@@ -15,8 +15,7 @@
         
       <div class="field">
         <%= f.label "Clasificación" %>
-        <%= f.select(:classification, [["Neutro", "*"], ["Egreso", "-"], ["Ingreso", "+"]]) %>
-        <!-- {:class => "form-control"} -->
+        <%= f.select(:classification, [["Neutro", "n"], ["Egreso", "e"], ["Ingreso", "i"]]) %>
       </div>
 
  </div>
