--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,7 @@
 
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="material-icons" style="display: inline-flex; vertical-align: middle;font-size:33px;">account_circle</i>
+                                <i class="material-icons" style="display: inline-flex; vertical-align: middle;font-size:33px;">account_balance_wallet</i>
                                 Cuentas Bancarias
                                 <b class="caret"></b>
                             </a>
