--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, @user.name) %>
+<% provide(:title) %>
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
@@ -14,7 +14,6 @@
 <% provide(:title, @user.name) %>
 
 <script src="material.js"></script>
-<h1>Graficotas</h1><h1>Graficotas</h1><h1>Graficotas</h1>
 <br>
 <br>
 <br>
