--- a/app/views/movements/_row.html.erb
+++ b/app/views/movements/_row.html.erb
@@ -15,13 +15,18 @@
         <td><%= number_to_currency(movement.deposit, locale: :es, separator: '.', delimiter: ',') %></td>
         <% @m = movement.deposit + movement.withdrawal %>
         <% @temp_m += @m %>
-
+<td>    <%= number_to_currency( @temp_m , locale: :en, separator: '.', delimiter: ',') %></td>
         <td>
-          <div id="n<%= movement.id %>" style="display:block; position:absolute; opacity:0; pointer-events:none;">
-              <%= link_to raw("<i class='material-icons md-24'>edit</i>"), edit_user_account_movement_path(current_user,params[:account_id],movement.id),remote:true ,class:"btn btn-raised btn-info edition", style: "margin-right: 20px;" %>
-              <%= link_to raw("<i class='material-icons md-24'>delete_sweep</i>"), user_account_movement_path(current_user, params[:account_id], movement.id),class:"btn btn-raised btn-warning edition", method: :delete, data: { confirm: 'Are you sure?' } %>
-          </div>
-          <%= number_to_currency( @temp_m , locale: :en, separator: '.', delimiter: ',') %>
+<!-- <div id="n<%= movement.id %>" style="display:block; position:absolute; opacity:0; pointer-events:none;"> -->
+<!-- link_to raw("<i class='material-icons md-24'>edit</i>"), edit_user_account_movement_path(current_user,params[:account_id],movement.id),remote:true ,class:"btn btn-raised btn-info edition", style: "margin-right: 20px;" %>
+link_to raw("<i class='material-icons md-24'>delete_sweep</i>"), user_account_movement_path(current_user, params[:account_id], movement.id),class:"btn btn-raised btn-warning edition", method: :delete, data: { confirm: 'Are you sure?' } %>
+</div> -->
+    <div id="n<%= movement.id %>" style="display:block; position:absolute; opacity:0; pointer-events:none;">
+            <%=link_to raw("<i class='material-icons md-24'>edit</i>"), edit_user_account_movement_path(current_user,params[:account_id],movement.id),remote:true ,class:"btn btn-raised btn-info edition", style: "margin-right: 5px;" %>
+            <%=link_to raw("<i class='material-icons md-24'>delete_sweep</i>"), user_account_movement_path(current_user, params[:account_id], movement.id),class:"btn btn-raised btn-warning edition", method: :delete, data: { confirm: 'Are you sure?' } %>
+            </div>
+
+
         </td>
 
 
@@ -39,34 +44,21 @@
 
 <script>
   $(document).ready(function(){
-    $("tbody > tr").click(function(event){
-      var left = "95px";
-      var id = $(this).attr("id");
-      if ($("tr#"+ id +" td:last-child").width() > 100)
-        var left = "140px"
+    $("tbody > tr").mouseover(function(event) {
+            var id = $(this).attr("id");
+            // var t = setTimeout(function() {
+                // alert("hover");
 
-      $("div #add" + id).css("pointer-events","auto").animate({"opacity":"1","margin-left":"-45px"},500);
-      $("div#n"+id).css("pointer-events","auto").animate({"opacity":"1","margin-left":left});
+               $("div #add" + id).css("pointer-events","auto").animate({"opacity":"1","margin-left":"-35px"},500);
+               $("div#n"+id).css("pointer-events","auto").animate({"opacity":"1","margin-left":"30px"},500);
+            // }, 3000);
+            var t = setInterval(ocultar, 2000);
+          function ocultar() {
+            $("div #add" + id).css("pointer-events","none").animate({"opacity":"0","margin-left":"0"},500);
+            $("div#n"+id).css("pointer-events","none").animate({"opacity":"0","margin-left":"0"},500);
+clearInterval(t);
+          };
+        });
 
-      $("tbody > tr").click(function(event){
-        $("div #add" + id).css("pointer-events","none").animate({"opacity":"0","margin-left":"0"},500);
-        $("div#n"+id).css("pointer-events","none").animate({"opacity":"0","margin-left":"0"},500);
-      });
-    });
-
-/*No lo borres sirve muy bien*/
-    // $("tbody > tr").mouseover(function(event){
-    //   var id = $(this).attr("id");
-    //   $("div #add" + id).css("pointer-events","auto").animate({"opacity":"1","margin-left":"-45px"},500);
-    //   $("div#n"+id).css("pointer-events","auto").animate({"opacity":"1","margin-left":"110px"});
-    // });
-
-    // $("tbody > tr").mouseout(function(event){
-    //   var id = $(this).attr("id");
-    //   $("div #add" + id).css("pointer-events","none").animate({"opacity":"0","margin-left":"0"},500);
-    //   $("div#n"+id).css("pointer-events","none").animate({"opacity":"0","margin-left":"0"},500);
-    // });
-/*No lo borres sirve muy bien*/
-/*!   !   !   !   !   !   !   !   !*/
   });
 </script>
