--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <%= link_to image_tag("logo.png", alt: "logo"), root_path, class: 'navbar ', style:" width:'200'; height:'70';background-color:none;"%>
+                    <%= link_to image_tag("logo.png"), root_path, class: 'navbar-brand ', style:" width:'200'; height:'70';background-color:none;"%>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
