--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,8 @@
+<style media="screen">
+  .nav-brand{
+    width: 200px;
+  }
+</style>
 <div class="body-wrap">
     <div class="container">
         <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:#323131!important;" role="navigation">
@@ -8,7 +13,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <%= link_to image_tag("logo.png"), root_path, class: 'navbar-brand ', style:" width:'200'; height:'70';background-color:none;"%>
+                    <%= link_to image_tag("logo.png"), root_path, class: 'navbar-brand '%>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
