--- a/app/views/movements/_formulario.html.erb
+++ b/app/views/movements/_formulario.html.erb
@@ -40,7 +40,7 @@
 
                   <div class="input-group date horizontal" style="width: 5.5em">
                       <%= f.label "Fecha" %>
-                      <%= f.text_field :date, class: 'form-control', "data-provide" => "datepicker", "data-date-language" => 'es', "data-date-start-date" => Time.now, "data-date-today-highlight" => true, "data-date-today-btn" => true,autocomplete: :off %>
+                      <%= f.text_field :date, class: 'form-control', "data-provide" => "datepicker", "data-date-language" => 'es', "data-date-today-highlight" => true, "data-date-today-btn" => true,autocomplete: :off %>
                   </div>
 
                   <div class="horizontal">
