--- a/app/views/history_movements/previous_record.html.erb
+++ b/app/views/history_movements/previous_record.html.erb
@@ -1,26 +1,6 @@
-<% provide(:title, "Registro #{2012}") %>
+<% provide(:title, "Proveedor de Registros Antiguos") %>
 <h1>Log de movimientos realizados</h1>
 <h2>Filtro</h2>
-
-
-<!-- <div class="col-md-15">
-	<div class="well bs-component">
-		form_tag previous_record_user_history_movements_url do |f| 
- previous_record_user_history_movements_path 
-
-		label_tag "Introduzca fechas"
-		<div class="input-group input-daterange">
-			text_field_tag :year1, class: 'form-control', "data-provide" => "datepicker", "data-date-language" => 'es', "data-date-today-highlight" => true, "data-date-today-btn" => true, "data-date-orientation" => "bottom"
-      <div class="input-group-addon">to</div>
-      text_field_tag :year2, class: 'form-control', "data-provide" => "datepicker", "data-date-language" => 'es', "data-date-today-highlight" => true, "data-date-today-btn" => true, "data-date-orientation" => "bottom"
-		</div>
-
-		<div class="actions">
-			submit_tag "Filtrar",class: "btn btn-primary"
-		</div>
-		end
-	</div>
-</div> -->
 
 <div style="display: block; width: 100%; margin:10px;">
 <div class="btn-group">
@@ -32,11 +12,108 @@
 </a>
 
 <ul class="dropdown-menu">
-<li><a><%=link_to "2016", :date => "2016"%></a></li>
-<li><a><%=link_to "2015", :date => "2015"%></a></li>
-<li><a><%=link_to "2014", :date => "2014"%></a></a></li>
+<li><a><%=link_to "2016", :since => "2016-01-01", :until => "2016-12-31" %></a></li>
+<li><a><%=link_to "2015", :since => "2015-01-01", :until => "2015-12-31" %></a></li>
+<li><a><%=link_to "2014", :since => "2014-01-01", :until => "2014-12-31" %></a></a></li>
 <li class="divider"></li>
 <li><a><%=link_to "All", current_record_user_history_movements_path(current_user)%></a></li>
-</ul>
+</ul> 
+
+<%= form_tag(previous_record_user_history_movements_path(current_user), method: "get", id:"search-form", style:"display:none" ) do %>
+<div class="field">
+	<%= label_tag(:since, "Buscar desde:") %>
+	<%= text_field_tag :since, nil, class: 'form-control', "data-provide" => "datepicker", "data-date-language" => 'es', "data-date-today-highlight" => true, "data-date-today-btn" => true,autocomplete: :off %>
+</div>
+<div class="field">
+	<%= label_tag(:until, "Buscar hasta:") %>
+	<%= text_field_tag :until, nil, class: 'form-control', "data-provide" => "datepicker", "data-date-language" => 'es', "data-date-today-highlight" => true, "data-date-today-btn" => true,autocomplete: :off %>  	
+</div>
+<div class="field">
+	<%= submit_tag("Search", class: "btn btn-primary") %>
+</div>
+<% end %>
+<style type="text/css">
+	.search{
+  color:white;
+  background: #614381;
+  width: 150px;
+  height: 150px;
+  border-radius:75px;
+  float:left;
+  cursor: pointer;
+}
+  .search i.material-icons{
+    padding-left: 0px;
+    padding-top: 0px;
+    font-size: 150px;
+  }
+</style>
+
+<div class="search" id="search"><i class="material-icons">search</i></div>
+
+
+
+ <h1><%= params[:since] %></h1>
+<% unless params[:since].blank? %>
+<table class="table table-striped table-hover ">
+  <thead>
+    <tr style="background-color: #01D59C!important;">
+      <th>Cuenta</th>
+      <th>Concepto de pago</th>
+      <th>Referencia</th>
+      <th>Fecha</th>
+      <th>Mes</th>
+      <th>Detalle</th>
+      <th>Categoria</th>
+      <th>Retiro</th>
+      <th>Deposito</th>
+      <th>Saldo</th>
+    </tr>
+  </thead>
+
+
+  <tbody>
+ 
+  <% @temp_m = 0 %>
+    <% @history.each do |previous| %>
+      <tr>
+      	<td><%= Account.find(previous.account_id).name %></td>
+        <td><%= previous.concepto_de_pago %></td>
+        <td><%= previous.reference %></td>
+        <td><%= previous.date.strftime('%d/%m/%Y') %></td>
+ 				<!--        Esta fecha es la de cuando se registro -->
+        <td> <%= ApplicationRecord.month(previous.date) %></td>
+        <!-- Crear espacio para fecha en que se reporto el retiro o deposito -->
+        <td><%= previous.detail %></td>
+        <td><%= Category.find(previous.category_id).name %></td>
+        <td><%= number_to_currency(previous.withdrawal, locale: :es, separator: '.', delimiter: ',') %></td>
+        <td><%= number_to_currency(previous.deposit, locale: :es, separator: '.', delimiter: ',') %></td>
+        <% @m = previous.deposit + previous.withdrawal %>
+        <% @temp_m += @m %>
+        <td><%= number_to_currency( @temp_m , locale: :en, separator: '.', delimiter: ',') %></td>
+      	<!-- mandar a llamar Financial Statement -->
+
+	  </tr>
+    <% end %>
+
+  </tbody>
+  
+</table>
+<% end %>
+
+
 </div>
 </div>
+<script>
+	$(document).ready(function(){
+		var state = 0;
+		$("#search").click(function(){
+			if (state == 0){
+				$("#search-form").show();
+			}else{
+				$("#search-form").hide();
+				state = 1;
+			}
+		});
+	});
+</script>
