--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
+                    <% unless logged_in? %>
                     <%= link_to image_tag("http://www.codealab.mx/assets/codeacamp_logo3-d00e28326ca4ba35c48d58af090ee7df.png", alt: "logo", size:"175x75"), root_path, class: 'navbar-brand '%>
+                    <%else %>
+                    <%= link_to image_tag("http://www.codealab.mx/assets/codeacamp_logo3-d00e28326ca4ba35c48d58af090ee7df.png", alt: "logo", size:"175x75"), current_user, class: 'navbar-brand '%>
+                    <%end %>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
