--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Categories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.filtr{
+	width: 		5em !important;
+	font-size: 	20px !important;
+	padding-top:5px !important;
+	padding-left:5px !important;
+}
