--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,7 +11,7 @@
 <div style="display: block; width: 100%; margin:10px;">
 
 <div class="btn-group">
-<a class="btn btn-info" style="width: 7em">Filtrar</a>
+<a class="btn btn-info filtr">Filtrar</a>
 <a href="bootstrap-elements.html" data-target="#" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-expanded="false" style="width:3em"><span class="caret"></span>
 <div class="ripple-container">
 
