--- a/app/views/movements/_formulario_edit.html.erb
+++ b/app/views/movements/_formulario_edit.html.erb
@@ -54,7 +54,7 @@
 
               <!-- <a data-dismiss="modal" data-toggle="modal" href="#lost">Click</a> -->
 
-                                <div class="horizontal">
+                                <!-- <div class="horizontal">
                                   <label data-toggle="collapse" data-target="#iva" aria-expanded="false" aria-controls="collapseTwo">
                                       Integrar Iva<input type="checkbox">
                                   </label>
@@ -85,8 +85,8 @@
                                                  <div class="horizontal" style="width: 6em">
                                                      <%= f.label "Deposito"%>
                                                      <%= f.text_field :deposit, class: 'form-control dig', size: 10, autocomplete: :off %>
-                                                 </div>
-<!-- _______________________________________________________________________________________  -->
+                                                 </div> -->
+
 <!--
 
 <div class="horizontal">
@@ -127,7 +127,7 @@
                                                 </div>
 
 _______________________________________________________________________________
-<div class="well">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ut molestias eius, nam neque esse eos modi corrupti harum fugit, hic recusandae praesentium, minima ipsa eligendi architecto at! Culpa, explicabo.</div> 
+<div class="well">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ut molestias eius, nam neque esse eos modi corrupti harum fugit, hic recusandae praesentium, minima ipsa eligendi architecto at! Culpa, explicabo.</div>
                               </div> -->
 
 
