--- a/app/views/accounts/_row.html.erb
+++ b/app/views/accounts/_row.html.erb
@@ -1,43 +1,25 @@
 <div id="container_account">
     <div class="social">
-        <div class='front'>
+        <div class='front' style="background-color:#ff7043;">
             <tr id="<%= account.id %>">
                 <td style="font-size:90px;">
                     <%= account.name %></td>
             </tr>
         </div>
 
+        <div class='back' style="background-color:  #ff5722">
+            <% total = 0 %>
+            <% account.movements.each do |t| %>
+            <% temp = t.withdrawal + t.deposit %>
+            <% total += temp %>
+            <% end %>
+            <%= link_to number_to_currency(total, locale: :es, separator: '.', delimiter: ',') , user_account_movements_path(current_user,account.id), class:"show-back"%>
 
-          <div class='back'>
-          <% total = 0 %>
-          <% account.movements.each do |t| %>
-          <% temp = t.withdrawal + t.deposit %>
-          <% total += temp %>
-          <% end %>
-        <%= link_to number_to_currency(total, locale: :es, separator: '.', delimiter: ',') , user_account_movements_path(current_user,account.id), class:"show-back"%>
-
-            <!-- =link_to account.name, user_account_movements_path(current_user,account.id), class:"btn btn",style:"width:200px;height:90px;margin-top:-3px;margin-left:0px;margin-buttom:0;padding: 41% 30%;color:
-            white;margin:none;box-shadow:none;font-size:1.3em;"%> -->
-
-            <%= link_to raw("<i class='material-icons '>edit</i>"),edit_user_account_path(current_user,account.id) ,remote: true,class:"btn btn-success center ",style:"display: inline-block; width:3em; padding:0!important; position:absolute; bottom:0; left:0;"%>
+            <%= link_to raw("<i class='material-icons '>edit</i>"),edit_user_account_path(current_user,account.id) ,remote: true,class:"btn btn-success center ",style:"display: inline-block; width:3em; padding:0!important; position:absolute; bottom:0; left:0;
+            background-color:#26c6da"%>
 
             <%= link_to raw("<i class='material-icons '>delete_sweep</i>"),user_account_path(current_user,account.id),class:"btn btn-raised btn-warning center" ,style:"background-color: #FF3333!important;display: inline-block; width:3em; padding: 0!important;
             position:absolute; bottom:0; right:0;", method: :delete, data: { confirm: 'Are you sure?' } %>
-
-
-<!-- style:"
-width:200px;
-height:90px;
-margin-top:-3px;
-margin-left:0px;
-margin-buttom:0;
-padding: 41% 30%;
-color: white;
-margin:none;
-box-shadow:none;
-font-size:1.3em;" -->
-<!-- ,style:"width:200px;height:50px;margin-top:-3px;margin-left:0px;margin-buttom:0;padding: 25%; background-color: white;" -->
-
 
         </div>
     </div>
